# RobotArm

./: CMakeLists.txt  FEEDBACK.md  README.md  main.cpp  vcpkg.json
examples/: CMakeLists.txt  Kinematics.cpp
examples/Boids/: Boids.cpp  Boids.hpp  CMakeLists.txt  main.cpp
examples/example/: CMakeLists.txt  Example.cpp
examples/robot/: CMakeLists.txt  RobotScene.hpp  main.cpp
include/: MouseListener.hpp  ParentSegment.hpp  Segment.hpp
include/Kinematics/: CCDSolver.hpp  Cylinder.hpp  Segment2D.hpp  Segment3D.hpp  Segments.hpp
include/geometry/: Ball.hpp  RobotArm.hpp  Segment.hpp
include/kinematics/: CCDSolver.hpp  IRobotArm.hpp  RobotArm.hpp
include/math/: Math.hpp
include/scene/: Controls.hpp  RobotScene.hpp  TargetPoint.hpp
src/: CMakeLists.txt
src/Example/: CMakeLists.txt  Example.cpp  testing.cpp
src/Math/: Math.cpp
src/Robotics/: CCDSolver.cpp  CMakeLists.txt  ParentSegment.cpp  Segment.cpp  Segment2D.cpp  Segment3D.cpp  Segments.cpp
src/boids/: Boids.cpp
src/geometry/: Ball.cpp  RobotArm.cpp  Segment.cpp
src/kinematics/: CCDSolver.cpp  Cylinder.cpp  RobotArm.cpp  Segment2D.cpp  Segment3D.cpp  Segments.cpp
src/robot/: CMakeLists.txt  main.cpp
src/scene/: Controls.cpp  RobotScene.cpp  TargetPoint.cpp
tests/: CCDSolver_test.cpp  CMakeLists.txt  RobotArm_test.cpp  TargetPoint_test.cpp
